--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "homepage": "https://github.com/MarvelSQ/build-in-browser#readme",
   "dependencies": {
+    "@monaco-editor/react": "^4.5.0",
     "antd": "^5.4.2",
+    "monaco-editor": "^0.37.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "workbox-core": "^6.5.4"
@@ -29,6 +31,7 @@
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@types/wicg-file-system-access": "^2020.9.6",
+    "@vitejs/plugin-react": "^4.0.0",
     "@vitest/coverage-c8": "^0.30.1",
     "typescript": "^5.0.4",
     "vite": "^4.2.2",
